--- a/style.css
+++ b/style.css
@@ -112,6 +112,43 @@
   min-width: 24ch; 
   min-height: 42px; 
 }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0,0,0,0.7);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background: #111;
+  padding: 2rem;
+  border-radius: 1rem;
+  max-width: 600px;
+  width: 90%;
+  text-align: center;
+  color: white;
+  position: relative;
+}
+.modal-content video {
+  width: 100%;
+  max-height: 300px;
+  border-radius: 1rem;
+  margin-bottom: 1.5rem;
+  object-fit: contain;
+  background-color: black;
+}
+
+.close {
+  position: absolute;
+  top: 10px; right: 20px;
+  font-size: 2rem;
+  cursor: pointer;
+  color: white;
+}
 
 .course-animation span::after {
   content: '';
@@ -314,7 +351,28 @@
   }
   .service-info i{
     font-size: 8rem;
+    color: var(--text-color);
   }
+  .glow-role {
+  background: linear-gradient(120deg, #ffffff 0%, #c0c0c0 50%, #ffffff 100%);
+  background-size: 200% auto;
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shimmer 2s linear infinite;
+  font-weight: bold;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -200% center;
+  }
+  100% {
+    background-position: 200% center;
+  }
+}
+
 .projects {
   background-color: var(--bg-color);
   padding: 4rem 2rem;
